# Robotics-at-Home-with-Raspberry-Pi-Pico

./: .gitignore  README.md  test-fit.drawio
.deploy/: ch-10-1-follow.sh  ch-10-2-graphing.sh  ch-10-3-follow-wall.sh  ch-11-1-encoder-speed.sh  ch-11-2-speed-control.sh  ch-13-all-sensors-test.sh  ch-13-no-sensors.sh  ch-5-1-test-1-pin.sh  ch-5-1-test-all-pins.sh  ch-5-2-motors-forward.sh  ch-8-1-sensor-test.sh  ch-8-2-2-sensors.sh  ch-8-3-avoid-walls.sh  ch-9-3-sensor-remote.sh  ch-9-4-teleop.sh  repl.sh  send-it.sh  send-libs.sh  setup-libraries.sh
ch-02/: light_led.py
ch-05/1-tests/: motors_test_1_pin_short.py  motors_test_all_pins_short.py
ch-05/2-forward-back/: motors_backward.py  motors_forward.py
ch-05/3-turning/: motors_2_motor_turn.py
ch-05/4-pwm/: motors_pwm_drive_slower.py  motors_pwm_gentle_turn.py  motors_pwm_multispeed.py
ch-06/1-simple-input/: pio_read_2_pins.py
ch-06/2-techniques/: extract_a_bit.py  pio_counting_down.py  pio_counting_up.py  reversing_a_register.py  shift_and_reverse.py
ch-07/: Robot_simple_brackets.FCStd  robot.FCStd
ch-12/: robot.FCStd
ch-13/: arena.FCStd  simpler-arena.FCStd
ch-13/1-modelling-space/computer/: display_arena_from_robot.py  display_from_robot.py  find_devices.py  pyproject.toml  robot_ble_connection.py
ch-13/2.1-modelling-space-simple/: arena.py  display_arena.py  pyproject.toml
ch-13/ble-tests/computer/: pyproject.toml  test_ble.py
ch-2/: blink.py  light_led.py
ch-3/: Robot.FCStd
ch-6/: simple_pin_test.py
ch-7/: Robot_simple_brackets.FCStd  pimoroni_vl53l1x.FCStd  robot.FCStd
(+249 files in other folders)
