[tool.poetry]
name = "modelling-space"
version = "0.1.0"
description = ""
authors = ["Danny Staple <danny@orionrobots.co.uk>"]
readme = "README.md"
packages = [{include = "modelling_space"}]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "3.6.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
