[tool.poetry]
name = "ble-test"
version = "0.1.0"
description = ""
authors = ["Danny Staple <danny@orionrobots.co.uk>"]
readme = "README.md"
packages = [{include = "ble_test"}]

[tool.poetry.dependencies]
python = "^3.9"
bleak = "0.19.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
